--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pokeCard{
+  background-color:#fff;
+  max-width: 300px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  overflow: hidden;
+  border-radius: 1rem;
+  box-shadow: 0px 1rem 1.5rem rgba(0,0,0,0.5);
 }
 
-.App-link {
-  color: #61dafb;
+.pokeCard img{
+margin: 0 auto;
+background-color: #fff;
+width: 6rem;
+height: 6rem;
+box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.3);
+border-radius: 0 50% 50% 0;
+transform: translateY(20%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pokeCard .pokeName{
+  font-size: 2em;
+  text-transform: capitalize;
+  font-weight: bolder;
+  text-align: center;
+  margin-bottom: 0;
+  margin-top: 0.5em;
 }
+
+.pokeCard pokeId{
+  width: 2rem;
+  height: 1rem;
+  font-size: 1em;
+  font-weight: bolder;
+  display:flex;
+  transform: translateY(50%);
+  padding-left: 0.5rem;
+  align-items: baseline;
+
+}
+
+.pokeType{
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-size: 0.8em;
+  margin: 0 auto;
+  width: fit-content;
+  padding-left: 0.25rem;
+}
+
+.fire{
+  color:red;
+  background-color:rgba(255, 0, 0, 0.3);
+}
+
+.electric{
+  color:rgb(224, 224, 55);
+  background-color:rgba(255, 230, 0, 0.3);
+}
+
+.normal {} 
+.fighting{} 
+.flying{} 
+.poison{} 
+.ground{} 
+.rock{} 
+.bug{} 
+.ghost{} 
+.steel{} 
+.water{
+  color:blue;
+  background-color:rgba(0, 0, 255, 0.3);
+} 
+.grass{}
+.psychic{} 
+.ice{} 
+.dragon{} 
+.dark{} 
+.fairy{
+  color:rgb(220, 130, 238);
+  background-color:rgba(255, 0, 212, 0.3);
+} 
+.unknown{} 
+.shadow{}
