--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
   flex-direction: column;
   overflow: hidden;
   border-radius: 1rem;
-  box-shadow: 0px 1rem 1.5rem rgba(0,0,0,0.5);
+  border: 2px solid #fcfcfc;
+  /*box-shadow: 0px 1rem 1.5rem rgba(0,0,0,0.5);*/
 }
 
 .pokeCard img{
